# ClaimReady

./: .gitignore  LICENSE  README.md  TASKS.md  pyproject.toml  requirements.txt
claimready/: __init__.py  api.py  api_models.py  cli.py  client.py  config.py  db.py  extract.py  fixtures.py  ingest.py  models.py  progress.py  reconcile.py
docs/: API_REFERENCE.md  API_STATUS.md  claimready-patients.csv
docs/superpowers/plans/: 2026-07-13-milestone-1.md  2026-07-13-milestone-3-reconciliation-engine.md
frontend/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/api/export/patients.csv/: route.ts
frontend/app/facilities/: page.tsx
frontend/app/patients/[patient_external_id]/: page.tsx
frontend/app/pipeline-health/: page.tsx
frontend/app/queue/: page.tsx
frontend/components/: queue-table.tsx  ui.test.tsx  ui.tsx
frontend/lib/: api.ts  types.ts
tests/: test_api.py  test_cli.py  test_client.py  test_extraction.py  test_idempotency.py  test_ingest.py  test_reconciliation.py  test_reconciliation_idempotency.py  test_schema.py
