[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "claimready"
version = "0.1.0"
description = "ClaimReady: Medicare Part B wound-care billing triage scaffold"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "pydantic>=2.10",
    "starlette>=0.46",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = ["pytest>=9.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["claimready"]
